// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The RegistrationLoginButtons component should render a message about the application window being closed 1`] = `
<Col
  md={
    Object {
      "offset": 1,
      "span": 5,
    }
  }
>
  <Card
    body={false}
    style={
      Object {
        "margin": "30px 0",
        "width": "100%",
      }
    }
  >
    <CardBody>
      <CardTitle
        className="blue"
      >
        Apply for the CleanBC Industrial Incentive Program (CIIP)
      </CardTitle>
      <p>
        The due date for CIIP application forms has passed.
      </p>
      <p>
        You may still log in to view your submitted CIIP applications and submit any changes requested by the Climate Action Secretariat.
      </p>
      <a
        className="jsx-513087841 full-width btn btn-primary btn-lg"
        href="/register"
        style={
          Object {
            "display": "block",
            "padding": "15px",
          }
        }
      >
        Register and Apply
      </a>
    </CardBody>
  </Card>
  <LoginForm>
    <Button
      active={false}
      className="login-link"
      disabled={false}
      type="submit"
      variant="outline-dark"
    >
      Already have an account? Click here to login.
    </Button>
  </LoginForm>
  <JSXStyle
    id="513087841"
  >
    .login-link{padding:20px;width:100%;-webkit-text-decoration:underline;text-decoration:underline;}.card-body &gt; p:first-of-type{padding:10px 0 0 0;}.card-body &gt; p:last-of-type{padding:0 0 10px 0;}
  </JSXStyle>
</Col>
`;

exports[`The RegistrationLoginButtons component should render the date where the current application window closes 1`] = `
<Col
  md={
    Object {
      "offset": 1,
      "span": 5,
    }
  }
>
  <Card
    body={false}
    style={
      Object {
        "margin": "30px 0",
        "width": "100%",
      }
    }
  >
    <CardBody>
      <CardTitle
        className="blue"
      >
        Apply for the CleanBC Industrial Incentive Program (CIIP)
      </CardTitle>
      <p>
        Operators must submit a CIIP application form by
         
        <strong>
          January 1st, 2020
        </strong>
        .
      </p>
      <p>
        As part of the application, information about the operation’s energy use, emissions, and production is required.
      </p>
      <a
        className="jsx-513087841 full-width btn btn-primary btn-lg"
        href="/register"
        style={
          Object {
            "display": "block",
            "padding": "15px",
          }
        }
      >
        Register and Apply
      </a>
    </CardBody>
  </Card>
  <LoginForm>
    <Button
      active={false}
      className="login-link"
      disabled={false}
      type="submit"
      variant="outline-dark"
    >
      Already have an account? Click here to login.
    </Button>
  </LoginForm>
  <JSXStyle
    id="513087841"
  >
    .login-link{padding:20px;width:100%;-webkit-text-decoration:underline;text-decoration:underline;}.card-body &gt; p:first-of-type{padding:10px 0 0 0;}.card-body &gt; p:last-of-type{padding:0 0 10px 0;}
  </JSXStyle>
</Col>
`;
